# bb-rust-bindings

./: Cargo.toml  bb_deps_check.sh  blake2_header.sh  build.rs  build_barretenberg.sh  debug_bindings.rs  libdeflate_symbols.sh  test_output.txt  test_output2.txt  ultra_honk_proof.hex  ultra_honk_proof_data.hex  ultra_honk_proof_fields.txt  ultra_keccak_honk_proof.hex  ultra_keccak_honk_proof_data.hex  ultra_keccak_honk_proof_fields.txt
src/: circuits.rs  execute.rs  lib.rs  prove.rs  witness.rs
src/barretenberg/: mod.rs  utils.rs
src/barretenberg/srs/: mod.rs  netsrs.rs
