[package]
name = "barretenberg-rust-bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "barretenberg_rust_bindings"

[dependencies]
acir = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.4", package = "acir" }
base64 = "0.22.0"
flate2 = "1.0.28"

hex = "0.4"
reqwest = { version = "0.12.20", features = ["blocking"] }
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }

[build-dependencies]
bindgen = "0.71"
