[package]
name = "barretenberg-rust-bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "barretenberg_rust_bindings"

[dependencies]
acir = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.4", package = "acir" }
bn254_blackbox_solver = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.4", package = "bn254_blackbox_solver" }
nargo = { git = "https://github.com/noir-lang/noir.git", tag = "v1.0.0-beta.4", package = "nargo" }
proptest = "=1.6.0"
base64 = "0.22.0"
flate2 = "1.0.28"
libc = "0.2.172"
hex = "0.4"
reqwest = { version = "0.12.20", features = ["blocking"] }
bincode = "1.3.3"
serde = { version = "1.0.219", features = ["derive"] }

[build-dependencies]
bindgen = "0.71"
